# dotfiles

./: .bash_profile  .gitconfig  .gitignore_global  .hgignore_global  .hgrc  .spacemacs  .tmux.conf  .vimrc  .zprofile  .zshenv  .zshrc  README.md  _sd  config.fish  hasking.cabal  ian.zsh-theme  init  init-hasking  init-osx  nixpkgs-config.nix  sd  user.nix
.emacs.d/: Cask  better-defaults.el  init-packages.el  init.el
sd-common/: help
sublime/: .gitignore  Clojure.sublime-settings  CoffeeScript.sublime-settings  Default (OSX).sublime-keymap  Default (Windows).sublime-keymap  Diff.sublime-settings  Distraction Free.sublime-settings  Git Commit.sublime-settings  Janet.sublime-syntax  Markdown Extended.sublime-settings  Markdown.sublime-settings  Package Control.sublime-settings  Plain text.sublime-settings  Preferences.sublime-settings  Python.sublime-settings  Rust.sublime-settings  Shell-Unix-Generic.sublime-settings  Soda Light 3.sublime-theme  SolarizedToggle.sublime-settings  Stylus.sublime-settings  SublimeHaskell.sublime-settings  Tomorrow Night Faceless.tmTheme  Tomorrow Night.tmTheme  Tomorrow.tmTheme  trailing_spaces.sublime-settings
