name:                hasking
version:             0.1.0.0
license-file:        LICENSE
author:              Ian Henry
maintainer:          ianthehenry@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends: base <5
               , ghc-mod
               , hasktags
               , hlint
               , stylish-haskell
               , structured-haskell-mode
  default-language:    Haskell2010
